package ex2;

public interface TextReaderInterface {
    public boolean hasNext();
    public String next();
}
